# XT_RISC-V_Soc

./: .gitignore  Cargo.toml  LICENSE  note.md  readme.md  rs_build.py
.cargo/: config.toml
ACT4/: Readme.md  run.py
ACT4/xt_rv32i/: rvmodel_macros.h  sail.json  test_config.yaml  xt-rv32i.yaml
C_lib/: readme.md
C_lib/Startup/: bootstrap.c  link.ld  simple_start.s  start.s
C_lib/XT_RISC_V/: Utils.h  XT_RISC_V.h  XT_RISC_V_Base.h  addr_define.h  asm_macros.h  bootstrap.h  core.h  type.h
C_lib/tests/: bootstrap.c
RTL/Defines/: AddressDefines.sv  CSR_Pkg.sv  CSR_Typedefs.sv  CoreConfig.sv  ExceptionDefines.sv  InstructionDefines.sv  RV32C_InstructionDefines.sv  SocConfig.sv  SystemPeripheral_Pkg.sv  XT_BUS.sv  XT_HBUS_Pkg.sv  XT_LBUS_Pkg.sv
RTL/Ifs/: memory_if.sv  xt_hbus_if.sv  xt_lbus_if.sv
Tools/: build.ps1  build.py  build_c.py  bulid.ps1  inc.ps1  inc.py  single-file_lib_generator.py  toolchian_download.txt
assets/: 图表.drawio
c_demo/: bootstrap.c  bootstrap.h
compliance_test/: test.py
firmware_lib/: readme.md
firmware_lib/rust/: Cargo.toml  link.x
firmware_lib/rust/.cargo/: config.toml
firmware_lib/rust/asm/: bare_start.riscv  no_trap_start.riscv  start.riscv
firmware_lib/rust/chip/: xt_rv32i.yaml
firmware_lib/rust/examples/: flash.rs  i2c.rs  key_sw.rs  mistaken_static_mut.rs  mtime.rs  privilege.rs  spi.rs  timer.rs  uart.rs
firmware_lib/rust/macros/: Cargo.toml
firmware_lib/rust/macros/src/: lib.rs
firmware_lib/rust/src/: hb32.rs  lb.rs  lib.rs  macros.rs  rv_core.rs  system_peripheral.rs  wisbone.rs
tests/: bootstrap.c
(+250 files in other folders)
